Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     flex-direction: column;
 }
 
-.title {
+.heading {
     text-align: center;
 }
 
@@ -40,7 +40,6 @@ main {
     flex: 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-auto-rows: min-content;
     gap: 1em;
     padding: 1rem;
     justify-items: center;
@@ -48,7 +47,7 @@ main {
 
 .book {
     width: 150px;
-    height: 10rem;
+    height: 13rem;
     background-color: grey;
     border: 3px solid black;
     box-sizing: border-box;
@@ -59,6 +58,27 @@ main {
     gap: 15px;
     position: relative;
     padding: 5px;
+    overflow: hidden;
+}
+
+.title,
+.author {
+    /* flex: 1; */
+    max-width: 140px;
+    word-wrap: break-word;
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
+.title {
+    -webkit-line-clamp: 3;
+}
+
+.author {
+    -webkit-line-clamp: 2;
 }
 
 .book.read {
